--- a/EjercicioUno/app/build.gradle
+++ b/EjercicioUno/app/build.gradle
@@ -47,8 +47,14 @@ dependencies {
 
     //Date picker
     implementation 'com.takisoft.datetimepicker:datetimepicker:1.0.3'
-
-
+    //toast
+    implementation 'com.github.vedraj360:DesignerToast:0.1.3'
+    //click effect
+    implementation 'com.github.realpacific:click-shrink-effect:2.0'
+    //progress
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+    //keyboard
+    implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC3'
 
 
 
