--- a/EjercicioUno/app/build.gradle
+++ b/EjercicioUno/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-parcelize'
+
 
 }
 
@@ -60,6 +62,9 @@ dependencies {
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
     /* Gson parse */
     implementation 'com.google.code.gson:gson:2.8.6'
+    /*Animate*/
+    implementation 'com.github.AtifSayings:Animatoo:1.0.1'
+
 
 
 
